--- a/style.css
+++ b/style.css
@@ -8,19 +8,10 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    /*padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;*/
     border-radius: 6px;
     border: 2px solid black;
 }
-/*.grid-row {
-    width: 100%;
-    height: 25%;
-    border-radius: 5px;
-    box-sizing: border-box;
-    
-}*/
+
 
 .grid-cell {
     width: 25%;
@@ -29,10 +20,7 @@
     box-sizing: border-box;
     border-radius: 3px;
     border: 2px solid black;
-    font-size: 80px;
     color:black;
-    text-align: center;
-    background-color: lightgrey;
     position: relative;
        
 }
@@ -50,5 +38,87 @@
 .score{
     margin-left: 70%;
     font-size: 20px;
+    margin-top: 1%;
+}
+div{
+    text-align: center;
 }
 
+.notColored{
+    background-color: white
+}
+
+.colored2{
+    background-color:#edf6e9;
+    font-size: 64px;
+    text-align: center;
+    padding-top: 29px;
+}
+
+.colored4{
+    background-color:#40e0d0;
+    font-size: 64px;
+    padding-top: 29px;
+}
+
+.colored8{
+    background-color: #0079cf;
+    font-size: 64px;
+    padding-top: 29px;
+}
+
+.colored16{
+    background-color: #718da5;
+    font-size: 64px;
+    padding-top: 29px;
+}
+
+.colored32{
+    background-color:#ffe062;
+    font-size: 64px;
+    padding-top: 29px;
+}
+
+.colored64{
+    background-color: #fdbb1c;
+    font-size: 64px;
+    padding-top: 29px;
+}
+
+.colored128{
+    background-color: #0055a4;
+    font-size: 52px;
+    padding-top: 29px;
+}
+
+.colored256{
+    background-color: #008080;
+    font-size: 52px;
+    padding-top: 29px;
+}
+.colored512{
+    background-color: #40e0d0;
+    font-size: 52px;
+    padding-top: 29px;
+}
+
+.colored1024{
+    background-color: #006700;
+    font-size: 39px;
+    padding-top: 29px;
+}
+
+.colored2048{
+    background-color:#8b0000;
+    font-size: 39px;
+    padding-top: 29px;
+    
+}
+
+h3 {
+    margin-left: 60%;
+}
+
+p{
+    background-color: #718da5;
+}
